--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@
 #server.port=8088
 #spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
+logging.file.path=/
+logging.file.name = log.txt
+
 spring.datasource.url=jdbc:postgresql://${PROD_DB_HOST}:${PROD_DB_PORT}/${PROD_DB_NAME}
 spring.datasource.username=${PROD_DB_USERNAME}
 spring.datasource.password=${PROD_DB_PASSWORD}
